# onda

./: .gitignore  LICENSE  README.md
Braço_description/: CMakeLists.txt  package.xml
Braço_description/launch/: controller.yaml  gazebo.launch
Braço_description/meshes/: prism1_1.stl  rot2_1.stl  rot3_1.stl
Braço_description/urdf/: Braço.xacro  materials.xacro
docker/: Dockerfile.roshumble
docker/config/: bashrc  docker_configs.sh  requirements.txt  tools.sh
docker/scripts/: build.sh  exec.sh  run.sh
docs/: ROS2_MIGRATION_GUIDE.md
peter_corke/: environment.yml  requirements.txt
peter_corke/examples/: exemplo01.py  exemplo02.py  exemplo03.py  exemplo04.py  exemplo05.py
peter_corke/scripts/: _report_numbers.py  braco_rtb.py  braco_swift_visualization.py  cinematica_inversa.py  closed_loop_sim.py  debug_swift.py  demo.py  demo_first_try.py  extra_plots.py  first_try.py  graspeClass.py  position_ui.py  render_poses.py  render_urdf_meshes.py  rrrpr_plot.py  subsea_arm_ui_only.py.py  swift_test.py  swift_test_urdf.py  test_urdf_load.py  trajectory_maker.py
ros_ws/: .gitignore  README.md  build_workspace.sh  convert_xacro.py  fix_encoding.py  fix_urdf_paths.py  test_braco_setup.sh  update_rviz_config.py  update_rviz_sed.sh
ros_ws/Braço_description/: CMakeLists.txt  package.xml
ros_ws/Braço_description/launch/: controller.launch  display.launch.py  gazebo.launch.py
ros_ws/Braço_description/meshes/: base_link.stl
ros_ws/Braço_description/urdf/: Braço.gazebo  Braço.trans  Braço.xacro  braco.gazebo  braco.trans  braco.xacro
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/braco_description/lib/braco_description/: send_cartesian.py  send_trajectory.py  trajectory_planner.py  trajectory_publisher.py
ros_ws/install/braco_description/share/braco_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/braco_description/share/braco_description/cmake/: braco_descriptionConfig-version.cmake  braco_descriptionConfig.cmake
ros_ws/install/braco_description/share/braco_description/config/: controllers.yaml
ros_ws/install/braco_description/share/braco_description/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ros_ws/install/braco_description/share/braco_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  trajectory.launch.py  urdf.rviz
ros_ws/install/braco_description/share/braco_description/meshes/: base_link.stl  prism1_1.stl  rot1_1.stl  rot2_1.stl  rot3_1.stl  rot4_1.stl
ros_ws/install/braco_description/share/braco_description/urdf/: Braço.gazebo  Braço.trans  Braço.xacro  braco.urdf  braco_fixed.urdf  materials.xacro
ros_ws/install/manipulator_disturbance_control/lib/manipulator_disturbance_control/: disturbance_applier_node  interactive_trajectory_maker.py  test_disturbance_client  test_disturbance_client.py  trajectory_recorder.py
ros_ws/install/manipulator_disturbance_control/share/manipulator_disturbance_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/manipulator_disturbance_control/share/manipulator_disturbance_control/cmake/: manipulator_disturbance_controlConfig-version.cmake  (+1 more)
ros_ws/install/manipulator_gazebo/share/manipulator_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/manipulator_msgs/share/manipulator_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
ros_ws/log/: latest_build
ros_ws/manipulator_disturbance_control/: CMakeLists.txt  package.xml
ros_ws/manipulator_disturbance_control/launch/: disturbance_control.launch
ros_ws/manipulator_disturbance_control/scripts/: advanced_examples.py  test_disturbances.sh  trajectory_controller.py  trajectory_with_disturbance.py
ros_ws/manipulator_disturbance_control/src/: disturbance_applier_node.cpp  test_disturbance_client.cpp
ros_ws/manipulator_gazebo/: CMakeLists.txt  package.xml
ros_ws/manipulator_gazebo/launch/: complete_system.launch
ros_ws/manipulator_gazebo/worlds/: simple_world.world
ros_ws/manipulator_msgs/: CMakeLists.txt  package.xml
ros_ws/output/: trajectory_report.txt
ros_ws/src/braco_description/: CMakeLists.txt  README.md  package.xml
ros_ws/src/braco_description/braco_description/: __init__.py  cinematica_inversa.py
ros_ws/src/braco_description/config/: controllers.yaml
ros_ws/src/braco_description/launch/: controller.launch  display.launch  display.launch.py  gazebo.launch  trajectory.launch.py  urdf.rviz
ros_ws/src/braco_description/meshes/: base_link.stl  prism1_1.stl  rot1_1.stl  rot2_1.stl  rot3_1.stl  rot4_1.stl
ros_ws/src/braco_description/scripts/: braco_controller.py  convert_xacro_manual.py  convert_xacro_proper.py  send_cartesian.py  send_trajectory.py  trajectory_planner.py  trajectory_publisher.py
ros_ws/src/braco_description/urdf/: Braço.gazebo  Braço.trans  Braço.xacro  braco.urdf  materials.xacro
ros_ws/src/manipulator_disturbance_control/: CMakeLists.txt  package.xml
ros_ws/src/manipulator_disturbance_control/launch/: trajectory_control.launch  trajectory_demo.launch  trajectory_maker.launch.py
ros_ws/src/manipulator_disturbance_control/scripts/: disturbance_gui.py  interactive_trajectory_maker.py  test_disturbance_client.py  trajectory_recorder.py
ros_ws/src/manipulator_disturbance_control/src/: disturbance_applier_node.cpp  test_disturbance_client.cpp
ros_ws/src/manipulator_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/manipulator_gazebo/config/: joint_controllers.yaml
ros_ws/src/manipulator_gazebo/launch/: spawn_braco.launch.py
ros_ws/src/manipulator_gazebo/urdf/: simple_manipulator.urdf.xacro
ros_ws/src/manipulator_msgs/: CMakeLists.txt  package.xml
(+96 files in other folders)
