<?xml version="1.0"?>
<package format="2">
  <name>manipulator_disturbance_control</name>
  <version>1.0.0</version>
  <description>Package for applying and testing external disturbances on manipulator robots</description>

  <maintainer email="user@example.com">Manipulator Test Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>manipulator_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  </export>
</package>
