<?xml version="1.0"?>
<package format="2">
  <name>manipulator_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation package for manipulator disturbance testing</description>

  <maintainer email="user@example.com">Manipulator Test Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>position_controllers</depend>
  <depend>effort_controllers</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
