<?xml version="1.0"?>
<package format="2">
  <name>manipulator_msgs</name>
  <version>1.0.0</version>
  <description>Custom messages and services for manipulator disturbance testing</description>

  <maintainer email="user@example.com">Manipulator Test Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
