<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>braco_description</name>
  <version>1.0.0</version>
  <description>Braco RRRPR manipulator — URDF, kinematics, and PD+gravity controller</description>

  <maintainer email="marcotayar@gmail.com">Marco Tayar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rclpy</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Simulation -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <!-- Control -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- Messages -->
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
