<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_disturbance_control</name>
  <version>1.0.0</version>
  <description>Package for applying and testing external disturbances on manipulator robots</description>

  <maintainer email="user@example.com">Manipulator Test Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>manipulator_msgs</depend>

  <!-- Modern Gazebo (Harmonic) transport + messages, replacing Gazebo Classic gazebo_msgs -->
  <depend>gz-transport13</depend>
  <depend>gz-msgs10</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
